--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "autoprefixer": "^10.4.17",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.3.0",
     "esbuild": "^0.19.11",
@@ -40,6 +41,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
