📦 NEW: easy docker

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "vite",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "NODE_ENV=production SESSION_SECRET=s3cr3t node ./build/server/index.js",
+    "docker": "run-s docker:*",
+    "docker:build": "docker build -t remix-hono-vite .",
+    "docker:run": "docker run --rm -d -p 8080:8080 --env-file .env remix-hono-vite",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -49,7 +52,7 @@
     "vite-tsconfig-paths": "^4.3.1"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   },
   "prettier": {}
 }
