📦 NEW: Remix vite hono full demo

--- a/package.json
+++ b/package.json
@@ -4,38 +4,35 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "run-s build:*",
-    "build:remix": "remix vite:build",
-    "build:server": "tsx server/builder.ts",
-    "dev": "vite",
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "NODE_ENV=production SESSION_SECRET=s3cr3t node ./build/server/index.js",
-    "docker": "run-s docker:*",
+    "start:docker": "run-s docker:*",
     "docker:build": "docker build -t remix-hono-vite .",
     "docker:run": "docker run --rm -d -p 8080:8080 --env-file .env remix-hono-vite",
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@hono/node-server": "^1.4.0",
-    "@remix-run/express": "^2.5.1",
-    "@remix-run/node": "^2.5.1",
-    "@remix-run/react": "^2.5.1",
-    "hono": "^3.12.5",
-    "isbot": "^4.4.0",
+    "@hono/node-server": "^1.8.1",
+    "@remix-run/node": "^2.7.2",
+    "@remix-run/react": "^2.7.2",
+    "hono": "^4.0.5",
+    "isbot": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-hono": "^0.0.15"
   },
   "devDependencies": {
-    "@hono/vite-dev-server": "^0.3.4",
-    "@remix-run/dev": "^2.5.1",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@hono/vite-dev-server": "^0.7.1",
+    "@remix-run/dev": "^2.7.2",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
     "autoprefixer": "^10.4.17",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.3.0",
-    "esbuild": "^0.19.11",
+    "esbuild": "^0.20.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -44,11 +41,10 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11",
+    "vite": "^5.1.4",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "engines": {
